# Ciap-mvp-A-new

./: .env.example  .gitignore  README.md
ciap-backend/: FILE-STRUCTURE.md  README.md  alembic.ini  pyproject.toml  test_score.py
ciap-backend/DATA/: __init__.py
ciap-backend/DATA/core/: __init__.py  database.py
ciap-backend/DATA/migrations/: env.py
ciap-backend/DATA/models/: __init__.py  campaigns.py  content.py  scoring.py  users.py
ciap-backend/DATA/schemas/: __init__.py
ciap-backend/alembic/: env.py  script.py.mako
ciap-backend/alembic/versions/: 20260412_initial_schema.py  20260530_create_saved_creators.py  e200f87befef_add_is_onboarded_to_user.py
ciap-backend/app/: config.py  dependencies.py  main.py
ciap-backend/app/core/: __init__.py  cache.py  exceptions.py  rate_limiter.py  redis_client.py  security.py
ciap-backend/app/db/: session.py
ciap-backend/app/ingestion/: __init__.py  base_connector.py  normalizer.py
ciap-backend/app/ml/: __init__.py  audience_segmenter.py  campaign_forecaster.py  feature_engineering.py  influence_scorer.py  model_registry.py  sentiment_analyzer.py
ciap-backend/app/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  campaign_service.py  creator_service.py  discover_service.py  forecast_service.py  oauth_service.py  platform_service.py  report_service.py  score_service.py  sme_service.py  sync_service.py
ciap-backend/app/tasks/: __init__.py  celery_app.py  report_tasks.py  scoring_tasks.py  sentiment_tasks.py  sync_tasks.py
ciap-backend/app/utils/: __init__.py  date_utils.py  encryption.py  pagination.py  response.py  (+1 more)
ciap-backend/seeds/: creators.json  seed.py  smes.json
ciap-backend/tests/: conftest.py
(+157 files in other folders)
